clusters/homelab/apps/convertx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
  namespace: convertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: convertx
  template:
    metadata:
      labels:
        app: convertx
    spec:
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx:v0.9.0 # {"$imagepolicy": "flux-system:convertx"}
          resources:
            requests:
              cpu: 20m
              memory: 384Mi
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 180
            periodSeconds: 30
            failureThreshold: 6
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: convertx-data
