clusters/homelab/apps/convertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx
  namespace: convertx
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: convert.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convertx
                port:
                  number: 80
  tls:
    - hosts:
        - convert.tafu.casa
      secretName: convertx-tls
